Did stuff 3 months ago i think

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="navbar">
     <div class="container">
       <div class="home">
-        <a href="#about" class="home link">Thorvald <span>Kjartansson</span></a>
+        <a href="#top" class="home link">Thorvald <span>Kjartansson</span></a>
       </div>
       <div class="options">
         <div class="option" id="aboutLink">
@@ -48,7 +48,7 @@
   </div>
 
   <!-- Primary Page Layout -->
-  <div class="splash"></div>
+  <div class="splash" id="top"></div>
   <div class="overlay"></div>
   <a href="#main" id="arrowlink">
     <div class="arrow">
@@ -99,41 +99,32 @@
           </p>
         </div>
       </div>
-<!-- 
+
       <div class="work row" id="work">
         <h3>Work</h3>
         <div class="four columns noMargin">
           <div class="workbox">
-            <div class="hoverUp">Café website</div>
-          </div>
-          <p class="work-desc">General Café website i did as a fun project.</p>
-          <a href="#">
             <div class="button">View project</div>
-            <div class="button-bottom"></div>
+          </div>
+          <a href="#">
           </a>
         </div>
         <div class="four columns">
           <div class="workbox">
-            <div class="hoverUp">Lorem ipsum</div>
-          </div>
-          <p class="work-desc">Lorem Ipsum Dolor Sit Amet.</p>
-          <a href="#">
             <div class="button">View project</div>
-            <div class="button-bottom"></div>
+          </div>
+          <a href="#">
           </a>
         </div>
         <div class="four columns">
           <div class="workbox">
-            <div class="hoverUp">Lorem ipsum</div>
-          </div>
-          <p class="work-desc">Lorem Ipsum Dolor Sit Amet.</p>
-          <a href="#">
             <div class="button">View project</div>
-            <div class="button-bottom"></div>
+          </div>
+          <a href="#">
           </a>
         </div>
       </div>
-    </div> -->
+    </div>
     
   </div>
     <div class="contact row" id="contact">
