--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
       </div>
     </div>
-    
+
   </div>
     <div class="contact row" id="contact">
       <h3>Interested in working with me?</h3>
@@ -136,5 +136,14 @@
 
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="jquery.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-77655333-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </body>
 </html>
