--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <!-- Basic Page Needs -->
   <meta charset="utf-8">
-  <title>Portfolio - Thorvald Kjartansson</title>
+  <title>Thorvald Kjartansson</title>
 
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1" media="(device-height: 568px)">
@@ -35,13 +35,13 @@
       </div>
       <div class="options">
         <div class="option" id="aboutLink">
-          <a href="#about" class="option link">about</a>
+          <a href="#about" class="option link">om mig</a>
         </div>
         <div class="option" id="workLink">
-          <a href="#work" class="option link">work</a>
+          <a href="#work" class="option link">projekter</a>
         </div>
         <div class="option" id="contactLink">
-          <a href="#contact" class="option link">contact</a>
+          <a href="#contact" class="option link">kontakt</a>
         </div>
       </div>
     </div>
@@ -56,69 +56,68 @@
     </div>
   </a>
   <div class="overlay-content">
-    <h3 class="nametext">Hello. my name is</h3>
+    <h3 class="nametext">Hej. Mit navn er</h3>
     <h1 id="myName">Thorvald Kjartansson</h1>
-    <h3 class="nametext">And welcome to my <span id="port-link">portfolio</span></h3>
+    <h3 class="nametext">Og velkommen til min <span id="port-link">hjemmeside</span></h3>
   </div>
 
   <div class="move" id="main">
     <div class="container">
       <div class="about row" id="about">
-        <h5>My name is Thorvald, and I am a danish webdesigner and developer.</h5>
+        <h5>Mit navn er Thorvald og jeg er en aspirerende datatekniker.</h5>
         <div class="one column margin"></div>
         <div class="five columns" id="about1">
-          <p>I am currently studying 'Information Science' at Vejle Technological College. My aim is to close the gap between design and development as I am also currently developing skills in back-end systems and web technology to compliment my existing skills as a webdesigner and in creating enriching experiences. I love the creative process and thought behind designs. I believe that good design results in effective communication and creates an engagement with the audience.</p>
+          <p>Jeg er på nuværende tidspunkt i gang med at studere som datatekniker med speciale i infrastruktur, og hvis du læser dette må jeg gå ud fra du så det link jeg skrev på mit CV og blev nysgerrig. Siden jeg var ung har jeg altid villet arbejde med computere, og jeg kan stadig huske da jeg samlede min første PC i en alder af 9 år. Siden da, har jeg udviklet mine evner og er blevet meget mere bekend med både computer hardware, samt software og jeg kan godt lide at kode ting og sager i min fritid.</p>
         </div>
         <div class="five columns" id="about2">
-          <p>When I am not coding and designing websites, I like to take long walks if the weather allows it, and I like to cook. After all nothing tastes better, than the food you've prepared yourself. When I have completed college here in Vejle, I plan to move to my nation's capital, to study at the IT-University in Copenhagen.</p>
+          <p>Når jeg dog ikke sidder og roder med min computer, kan jeg faktisk rigtig godt lide at gå lange gåture i skoven tæt hvor jeg bor, hvis vejret tillader det, og jeg elsker også at lave mad. Når man spiser den mad man selv har lavet, smager det jo bedre end normalt. Ellers kan jeg godt lide at tage i byen med kammeraterne en fredag aften, og jeg følger med i en del TV shows som Game of Thrones og Rick & Morty.</p>
         </div>
       </div>
 
       <div class="expert row">
         <h3>Expertise</h3>
-        <div class="two columns margin"></div>
-        <div class="three columns">
-          <p><b>I can do:</b><br><br>
-            - HTML and CSS<br>
-            - Responsive web design<br>
-            - UX/UI Design
+        <div class="four columns">
+          <p><b>Jeg er god til:</b><br><br>
+            - Webudvikling (frontend)<br>
+            - Opsætning af netværk<br>
+            - Bash / Windows Powershell
           </p>
         </div>
-        <div class="three columns">
-          <p><b>I'm working on:</b><br><br>
-            - Jquery<br>
+        <div class="four columns">
+          <p><b>Jeg er ved at lære:</b><br><br>
+            - Flere programmeringssprog<br>
             - Git<br>
-            - Ruby on Rails
+            - Webudvikling (backend)
           </p>
         </div>
         <div class="three columns">
-          <p><b>Later I'd like to learn:</b><br><br>
-            - PHP<br>
-            - More Javascript<br>
-            - The meaning of life
+          <p><b>Senere vil jeg gerne lære:</b><br><br>
+            - Spiludvikling<br>
+            - Opsætning af Arch Linux<br>
+            - Meningen med livet
           </p>
         </div>
       </div>
 
       <div class="work row" id="work">
-        <h3>Work</h3>
+        <h3>Projekter</h3>
         <div class="four columns noMargin">
-          <div class="workbox">
-            <div class="button">View project</div>
+          <div class="workbox workbox1">
+            <div class="button">Discord Chatbot</div>
           </div>
           <a href="#">
           </a>
         </div>
         <div class="four columns">
-          <div class="workbox">
-            <div class="button">View project</div>
+          <div class="workbox workbox2">
+            <div class="button">[projekt navn]</div>
           </div>
           <a href="#">
           </a>
         </div>
         <div class="four columns">
-          <div class="workbox">
-            <div class="button">View project</div>
+          <div class="workbox workbox3">
+            <div class="button">[projekt navn]</div>
           </div>
           <a href="#">
           </a>
@@ -128,8 +127,8 @@
 
   </div>
     <div class="contact row" id="contact">
-      <h3>Interested in working with me?</h3>
-      <p>Drop me an email on <a href="mailto:thorvaldha@gmail.com"><b>thorvaldha@gmail.com</b></a>, and we'll work something out!</p>
+      <h3>Interesseret i at arbejde med mig?</h3>
+      <p>Send en e-mail til mig via <a href="mailto:thorvaldha@gmail.com"><b>thorvaldha@gmail.com</b></a>, og så kan vi finde ud af noget sammen!</p>
     </div>
 
   <!-- End Document -->
