--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
       <div class="work row" id="work">
         <h3>Projekter</h3>
         <div class="four columns noMargin">
-          <div class="workbox workbox1">
-            <div class="button">Discord Chatbot</div>
-          </div>
-          <a href="#">
+          <a href="https://github.com/purvaldur/discord-bot/tree/master">
+            <div class="workbox workbox1">
+              <div class="button">Discord Chatbot</div>
+            </div>
           </a>
         </div>
         <div class="four columns">
