--- a/index.html
+++ b/index.html
@@ -102,18 +102,18 @@
       <div class="work row" id="work">
         <h3>Projekter</h3>
         <div class="four columns noMargin">
-          <a href="https://github.com/purvaldur/discord-bot/tree/master">
-            <div class="workbox workbox1">
-              <div class="button">Discord Chatbot</div>
-            </div>
-          </a>
+            <a href="https://github.com/purvaldur/purvaldur.github.io">
+                <div class="workbox workbox1">
+                    <div class="button">purvaldur.github.io</div>
+                </div>
+            </a>
         </div>
         <div class="four columns">
-          <div class="workbox workbox2">
-            <div class="button">[projekt navn]</div>
-          </div>
-          <a href="#">
-          </a>
+            <a href="https://github.com/purvaldur/discord-bot/tree/master">
+                <div class="workbox workbox2">
+                    <div class="button">Discord Chatbot</div>
+                </div>
+            </a>
         </div>
         <div class="four columns">
           <div class="workbox workbox3">
